cmake_minimum_required(VERSION 3.13)
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("${base}" "${source}")
    set_property(TARGET "${base}" PROPERTY CXX_STANDARD 17)
    target_link_libraries("${base}" "sqlr")
    add_test("sqlr-${base}" "${base}")
endforeach()
